--- a/ImageFolderToVideoLosslessMJPEG/ImageFolderToVideoLosslessMJPEG.csproj
+++ b/ImageFolderToVideoLosslessMJPEG/ImageFolderToVideoLosslessMJPEG.csproj
@@ -6,9 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NaturalSort.Extension" Version="3.1.0" />
     <PackageReference Include="ParallelAssemblyLine.NET" Version="0.0.1.1" />
-    <PackageReference Include="SharpAvi.NetStandard" Version="2.1.2" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ext\SharpAvi\SharpAvi\SharpAvi.csproj" />
   </ItemGroup>
 
 </Project>
