Linearization for averaging + HDR PQ output (including HW acceleration)

--- a/CL_AviDemo_To_AVI/Properties/launchSettings.json
+++ b/CL_AviDemo_To_AVI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CL_AviDemo_To_AVI": {
       "commandName": "Project",
-      "commandLineArgs": "\"R:\\screenshots\" 500 24 tga \"C:\\tmp\\avidemo\""
+      "commandLineArgs": "\"R:\\screenshots\" 2 1 tga \"C:\\tmp\\avidemo\" lod hhw"
     }
   }
 }
