--- a/CL_AviDemo_To_AVI/CL_AviDemo_To_AVI.csproj
+++ b/CL_AviDemo_To_AVI/CL_AviDemo_To_AVI.csproj
@@ -17,9 +17,11 @@
 
   <ItemGroup>
     <PackageReference Include="NaturalSort.Extension" Version="3.1.0" />
+    <PackageReference Include="OpenTK" Version="4.8.0" />
     <PackageReference Include="ParallelAssemblyLine.NET" Version="0.0.1.1" />
     <PackageReference Include="Pfim" Version="0.11.2" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
